[gd_scene load_steps=8 format=3 uid="uid://botjx0e8asnn4"]

[ext_resource type="Script" uid="uid://d027yxnpaywvs" path="res://Scenes/Natu's Tests/Players/(TD)PLAYER.gd" id="1_rkc1m"]
[ext_resource type="Texture2D" uid="uid://duembigoqtw6q" path="res://Assets/Main Character/Idle/boyfront0 (1).png" id="2_klbth"]
[ext_resource type="Texture2D" uid="uid://b0a0hg2gewpni" path="res://Assets/Main Character/Idle/boyfront1.png" id="3_agiwq"]
[ext_resource type="PackedScene" uid="uid://dq20x1kd55xtu" path="res://hearts.tscn" id="4_81qc2"]

[sub_resource type="SpriteFrames" id="SpriteFrames_dw050"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_klbth")
}, {
"duration": 1.0,
"texture": ExtResource("3_agiwq")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8erm5"]
radius = 26.0
height = 70.0

[sub_resource type="CircleShape2D" id="CircleShape2D_f0kl1"]
radius = 40.1995

[node name="Player1" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_rkc1m")
movement_speed = 15.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(4, -5)
scale = Vector2(3.0625, 3.4375)
sprite_frames = SubResource("SpriteFrames_dw050")
animation = &"Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 1)
shape = SubResource("CapsuleShape2D_8erm5")

[node name="player_hitbox" type="Area2D" parent="."]

[node name="CollionShape2D" type="CollisionShape2D" parent="player_hitbox"]
shape = SubResource("CircleShape2D_f0kl1")

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 1.5

[node name="deal_attack" type="Timer" parent="."]
wait_time = 0.5

[node name="regen_timer" type="Timer" parent="."]
wait_time = 10.0

[node name="health_bar" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="health_bar"]
offset_right = 40.0
offset_bottom = 40.0

[node name="heart" type="TextureRect" parent="health_bar/HBoxContainer"]
custom_minimum_size = Vector2(41, 0)
layout_mode = 2

[node name="Hearts" parent="health_bar/HBoxContainer/heart" instance=ExtResource("4_81qc2")]
position = Vector2(32, 29)

[node name="heart3" type="TextureRect" parent="health_bar/HBoxContainer"]
custom_minimum_size = Vector2(41, 0)
layout_mode = 2

[node name="Hearts" parent="health_bar/HBoxContainer/heart3" instance=ExtResource("4_81qc2")]
position = Vector2(32, 29)

[node name="heart4" type="TextureRect" parent="health_bar/HBoxContainer"]
custom_minimum_size = Vector2(41, 0)
layout_mode = 2

[node name="Hearts" parent="health_bar/HBoxContainer/heart4" instance=ExtResource("4_81qc2")]
position = Vector2(32, 29)

[node name="heart5" type="TextureRect" parent="health_bar/HBoxContainer"]
custom_minimum_size = Vector2(41, 0)
layout_mode = 2

[node name="Hearts" parent="health_bar/HBoxContainer/heart5" instance=ExtResource("4_81qc2")]
position = Vector2(32, 29)

[node name="heart2" type="TextureRect" parent="health_bar/HBoxContainer"]
layout_mode = 2

[node name="Hearts" parent="health_bar/HBoxContainer/heart2" instance=ExtResource("4_81qc2")]
position = Vector2(32, 29)

[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="deal_attack" to="." method="_on_deal_attack_timeout"]
[connection signal="timeout" from="regen_timer" to="." method="_on_regen_timer_timeout"]
